<resources>
    <string name="app_name">userApp</string>
    <string name="location">이동하고자 하는 강의실을 입력해주세요.</string>
    <string name="caution">강의실 번호만 입력해주시면 됩니다</string>
    <string name="et_hint">ex) 401 </string>
    <string name="start">안내 시작</string>

    <string name="start_point">출발지</string>
    <string name="now">현 위치</string>
    <string name="destination">목적지</string>
    <string name="remain_distance">남은 거리 : </string>
    <string name="next_remain">다음 거리 : \n</string>
    <string name="end">안내 종료</string>
    <string name="warning">층간 이동이 제한되어있습니다.</string>

</resources>