<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202020"
    tools:context=".ResultActivity">

    <LinearLayout
        android:id="@+id/result_next_ll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/next_bg"
        android:padding="10dp"
        android:layout_margin="20dp"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/result_next_arrow_iv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_weight="1"
            android:src="@drawable/ic_left_down_s"
            android:tint="@color/white" />

        <TextView
            android:id="@+id/result_next_remain_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/next_remain"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginStart="15dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/result_end_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/end"
        android:textColor="#202020"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:gravity="center"
        android:background="@drawable/end_btn_bg"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintTop_toTopOf="@id/result_next_ll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/result_next_ll" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/result_arrow_iv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_up"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.45" />

    <TextView
        android:id="@+id/result_warning_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warning"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="120dp" />

    <TextView
        android:id="@+id/result_remain_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/remain_distance"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintWidth_percent="0.5"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_arrow_iv" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="#A6A6A6"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/result_start_real_tv" />

    <TextView
        android:id="@+id/result_start_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/start_point"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toStartOf="@id/result_now_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/line" />

    <TextView
        android:id="@+id/result_start_real_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/result_now_tv"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/result_now_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/now"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        app:layout_constraintStart_toEndOf="@id/result_start_tv"
        app:layout_constraintEnd_toStartOf="@id/result_destination_tv"
        app:layout_constraintBottom_toTopOf="@id/line"/>

    <TextView
        android:id="@+id/result_now_real_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginBottom="100dp"
        app:layout_constraintStart_toEndOf="@id/result_start_tv"
        app:layout_constraintEnd_toStartOf="@id/result_destination_tv"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/result_destination_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/destination"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/result_now_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/line"/>

    <TextView
        android:id="@+id/result_destination_real_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/result_now_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>